# counter-strike-2D

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  cppcheck.cfg  docker-compose.yml  install.sh
.github/workflows/: cmake-build-test.yml  pre-commit.yml
client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  InputHandler.cpp  InputHandler.h  Render.cpp  Render.h  main.cpp
client/graphies/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  InputHandler.cpp  InputHandler.h  Render.cpp  Render.h  chatClient.cpp  chatClient.h  configuracion.h  inputHandler.cpp  inputHandler.h  inputServerHandler.cpp  inputServerHandler.h  musicManager.cpp  musicManager.h  render.cpp  render.h  textureStore.cpp  textureStore.h
client/graphies/components/: component.h  hudSprite.cpp  hudSprite.h  mapSprite.cpp  mapSprite.h  playerSprite.cpp  playerSprite.h
client/lobby/: CMakeLists.txt  creatematchwindow.cpp  creatematchwindow.h  creatematchwindow.ui  estadistics.cpp  estadistics.h  estadistics.ui  lobbywindow.cpp  lobbywindow.h  lobbywindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  recursos.qrc  selectskin.cpp  selectskin.h  selectskin.ui  waitroom.cpp  waitroom.h  waitroom.ui
common/: CMakeLists.txt  action.h  common_queue.h  common_socket.cpp  game.h  game_info.h  message.h  message_type.h  protocol.cpp  protocol.h  queue.h  team.h  thread.h  weapon.h  weapon_type.h
common/catedra/: liberror.cpp  queue.h  resolver.cpp  resolvererror.cpp  resolvererror.h  socket.cpp  socket.h  socket_interface.cpp  socket_interface.h
common/dto/: bomb_site_info.h  buy_ammo_request.h  buy_weapon_request.h  create_game_request.h  create_game_response.h  disconnect_request.h  dropped_weapon.h  game_config_info.h  game_list_request.h  game_list_response.h  game_ready_request.h  game_ready_response.h  game_state_update.h  gun_config_info.h  join_game_request.h  join_game_response.h  join_team_request.h  join_team_response.h  login_request.h  login_response.h  map_config_info.h  map_names_request.h  map_names_response.h  player.h  player_action.h  player_info.h  select_skin_request.h  site_info.h  structure_info.h
server/: CMakeLists.txt  PlayerCommand.cpp  PlayerCommand.h  acceptor.cpp  acceptor.h  chunk.cpp  chunk.h  client_handler.cpp  client_handler.h  collision_detector.cpp  command_type.h  configuration_loader.cpp  configuration_loader.h  events.h  game_config.cpp  game_config.h  game_identification.h  game_ready_notification.h  gun_config.cpp  gun_config.h  gun_shop.cpp  gun_shop.h  lobby.cpp  lobby.h  lobby_dto.h  main.cpp  map.cpp  map.h  map_config.h  match.cpp  match.h  match_dto.h  match_status_dto.h  message_parser.cpp  message_parser.h  movement_type.h  player.cpp  player.h  player_command.cpp  player_command.h  (+15 more)
server/commands/: buy_ammo_command.cpp  buy_ammo_command.h  buy_weapon_command.cpp  buy_weapon_command.h  change_skin_command.cpp  change_skin_command.h  defuse_bomb_command.cpp  defuse_bomb_command.h  equip_weapon_command.cpp  equip_weapon_command.h  game_ready_command.cpp  game_ready_command.h  leave_match_command.cpp  leave_match_command.h  movement_command.cpp  movement_command.h  player_command.h  reload_weapon_command.cpp  reload_weapon_command.h  shoot_command.cpp  shoot_command.h  switch_weapon_command.cpp  switch_weapon_command.h
server/game/: CMakeLists.txt  GameStateUpdater.cpp  GameStateUpdater.h  bomb_site.h  chunk.cpp  chunk.h  collision_detector.cpp  collision_detector.h  game_clock.cpp  game_clock.h  game_manager.cpp  game_manager.h  impact_info.h  map.cpp  map.h  player.cpp  player.h  player_skin.h  position.cpp  position.h  site.cpp  site.h  stages.h  status.h  structure.cpp  structure.h  team.h  time_information.h  weapon_info.h
server/game/gun/: CMakeLists.txt  ak47.cpp  ak47.h  awp.cpp  awp.h  bomb.cpp  bomb.h  bomb_encapsulator.cpp  bomb_encapsulator.h  bullet.cpp  bullet.h  glock.cpp  glock.h  gun.cpp  gun.h  gun_type.h  knife.cpp  knife.h  m3.cpp  m3.h  shoot_info.h  shoot_result.cpp  shoot_result.h
tests/: CMakeLists.txt  foo.cpp  mock_socket.h  test_protocol.cpp
